added all structures

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,20 @@
-@import './common';
-@import './example';
+@import './utils/variables';
+@import './utils/mixins';
+@import './utils/placeholders';
+@import './base/common';
+@import './components/header';
+@import './components/hero';
+@import './components/advantages';
+@import './components/taste';
+@import './components/video';
+@import './components/products';
+@import './components/sellers';
+@import './components/review';
+@import './components/subscribe';
+@import './components/footer';
+@import './components/mobile-menu';
+@import './components/modal-buy';
+@import './components/modal-thanks';
+@import './components/modal-review';
+@import './components/modal-feedback';
+@import './components/modal-subscribe';
