--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,30 +1,29 @@
-<section>
-    <title>Our pRODUCTS</title>
-    <ul>
-        <li>
-            <img src="../images/products/card1/dark-chocolate.jpg">
-            <h2>orange</h2>
-            <p>Dark chocolate</p>
-            <button>45 UAH</button>
+<section class="products">
+    <h2 class="products__title">Our pRODUCTS</h2>
+    <ul class="products-list">
+        <li class="products-list__item">
+            <img class="products-list__img" src="../images/products/card1/dark-chocolate.jpg" alt="dark-chocolate">
+            <h2 class="products-list__h2">orange</h2>
+            <p class="products-list__paragr">Dark chocolate</p>
+            <button class="products-list__btn">45 UAH</button>
         </li>
-        <li>
-            <img src="../images/products/card1/milk-chocolate.jpg">
-            <h2>APPLE&CRANBERRY</h2>
-            <p>Milk chocolate</p>
-            <button>50 UAH</button>
+        <li class="products-list__item">
+            <img class="products-list__img" src="../images/products/card1/milk-chocolate.jpg" alt="milk-chocolate">
+            <h2 class="products-list__h2">APPLE&CRANBERRY</h2>
+            <p class="products-list__paragr">Milk chocolate</p>
+            <button class="products-list__btn">50 UAH</button>
         </li>
-        <li>
-            <img src="../images/products/card1/lime-chocolate.jpg">
-            <h2>lime&sea salt</h2>
-            <p>Dark chocolate</p>
-            <button>66 UAH</button>
+        <li class="products-list__item">
+            <img class="products-list__img" src="../images/products/card1/lime-chocolate.jpg" alt="lime-chocolate">
+            <h2 class="products-list__h2">lime&sea salt</h2>
+            <p class="products-list__paragr">Dark chocolate</p>
+            <button class="products-list__btn">66 UAH</button>
         </li>
-        <li>
-            <img src="../images/products/card1/pine-chocolate.jpg">
-            <h2>pineapple</h2>
-            <p>Dark chocolate</p>
-            <button>54 UAH</button>
+        <li class="products-list__item">
+            <img class="products-list__img" src="../images/products/card1/pine-chocolate.jpg" alt="pine-chocolate">
+            <h2 class="products-list__h2">pineapple</h2>
+            <p class="products-list__paragr">Dark chocolate</p>
+            <button class="products-list__btn">54 UAH</button>
         </li>
     </ul>
-    <img src="../images/"
-</section>
+</section> 
