--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -7,24 +7,29 @@
                     <img class="carousel__img" src="../images/review/Victoria.png" srcset="" alt="women">
                     <h3 class="numbers-list__title">Victoria Dobrzhanska</h3>
                     <p class="numbers-list__text">
-                        I love this chocolate bar. Perfect combination of light crispy wafer, covered in a thin layer chocolate.
+                        I love this chocolate bar. 
+                        Perfect combination of light crispy wafer, covered in a thin layer chocolate.
                     </p>
                 </li>
                 <li class="numbers-list__item">
                     <img class="carousel__img" src="../images/review/Nazar.png" srcset="" alt="men">
                     <h3 class="numbers-list__title">Nazar Babenko</h3>
                     <p class="numbers-list__text">
-                        This chocolate confection is a delight! A delight! The wafer is light and crisp, the hazelnut cream is smooth, and the chocolate is good.
+                        This chocolate confection is a delight! 
+                        A delight! 
+                        The wafer is light and crisp, the hazelnut cream is smooth, and the chocolate is good.
                     </p>
                 </li>
                 <li class="numbers-list__item">
                     <img class="carousel__img" src="../images/review/Olena.png" srcset="" alt="women">
                     <h3 class="numbers-list__title">Olena Kampusch</h3>
                     <p class="numbers-list__text">
-                        Chocolate is a family favourite treat. Love the delicious smooth chocolate and the creaminess inside. The wafer is soft but crunchy.
+                        Chocolate is a family favourite treat. 
+                        Love the delicious smooth chocolate and the creaminess inside. 
+                        The wafer is soft but crunchy.
                     </p>
                 </li>
             </ul>
         </div>
-    </div>
+    </div> 
 </section>
