--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -15,8 +15,8 @@
             </li>
           </ul>
         </div>
-        <h1>Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</h1>
-        <button>Buy now</button>
+        <p class="info">Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</h1>
+        <button class="buy">Buy now</button>
       </div>
     </div>
 </section>
