--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -30,6 +30,7 @@
                     </p>
                 </li>
             </ul>
+            <button class="leave">Leave a review</button>
         </div>
     </div> 
 </section>
