--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -15,7 +15,7 @@
             </li>
           </ul>
         </div>
-        <p class="info">Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</h1>
+        <p class="info">Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
         <button class="buy">Buy now</button>
       </div>
     </div>
