--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -4,7 +4,7 @@
             <h2 class="numbers__title">Chocolate is loved</h2>
             <ul class="numbers-list">
                 <li class="numbers-list__item">
-                    <img class="carousel__img" src="../images/review/Victoria.png" srcset="" alt="women">
+                    <img class="carousel__img" src="../images/review/Victoria.png" alt="women">
                     <h3 class="numbers-list__title">Victoria Dobrzhanska</h3>
                     <p class="numbers-list__text">
                         I love this chocolate bar. 
@@ -12,7 +12,7 @@
                     </p>
                 </li>
                 <li class="numbers-list__item">
-                    <img class="carousel__img" src="../images/review/Nazar.png" srcset="" alt="men">
+                    <img class="carousel__img" src="../images/review/Nazar.png" alt="men">
                     <h3 class="numbers-list__title">Nazar Babenko</h3>
                     <p class="numbers-list__text">
                         This chocolate confection is a delight! 
@@ -21,7 +21,7 @@
                     </p>
                 </li>
                 <li class="numbers-list__item">
-                    <img class="carousel__img" src="../images/review/Olena.png" srcset="" alt="women">
+                    <img class="carousel__img" src="../images/review/Olena.png" alt="women">
                     <h3 class="numbers-list__title">Olena Kampusch</h3>
                     <p class="numbers-list__text">
                         Chocolate is a family favourite treat. 
