--- a/src/partials/video.html
+++ b/src/partials/video.html
@@ -1,13 +1,12 @@
 <section class="video">
-    <h2 class="video__header">how it's made?</h2>
+    <h2 class="video__header">how it's<span class="video__span">made?</span></h2>
     <div class="video-div">
 
-    <img src="../images/video/desktop/made-desktop@1x.jpg" alt="content-pic" class="video-div__bg"
-                          srcset="" />
+    <img src="./images/video/desktop/made-desktop@1x.jpg" alt="content-pic" class="video-div__bg" srcset="./images/video/desktop/made-desktop@1x.jpg 1x, ./images/video/desktop/2x/made-desktop@2x.jpg 2x" />
         
         <div class="video-play">
             <svg class="video-play__svg">
-                <use href="../images/"></use>
+                <use href="./images/icons/symbol-defs.svg#icon-play"></use>
             </svg>
         </div>
         <h2 class="video-title">Try  our chocolates today and discover the perfect balance of flavor</h2>
