--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -1,17 +1,17 @@
-<section class="secrets" data-aos="fade-down">
+<section class="sellers" data-aos="fade-down">
     <div class="inner-container">
-      <h2 class="secrets__title">Top Sellers</h2>
+      <h2 class="sellers"><span class="Sellers__span">Top</span>Sellers</h2>
       <div class="carousel-container">
         <div class="carousel-desk">
           <ul class="carousel-desk-list">
             <li class="carousel-desk-list__item">
-              <img class="carousel__img" src="../images/sellers/desktop/choc-coffe-desk.jpg" srcset="" alt="nuts">
+              <img class="carousel__img" src="./images/sellers/desktop/choc-coffe-desk.jpg" alt="nuts">
             </li>
             <li class="carousel-desk-list__item">
-              <img class="carousel__img" src="../images/sellers/desktop/choc-filling-desk.jpg" srcset="" alt="nuts and chocolate">
+              <img class="carousel__img" src="./images/sellers/desktop/choc-filling-desk.jpg" alt="nuts and chocolate">
             </li>
             <li class="carousel-desk-list__item">
-              <img class="carousel__img" src="../images/sellers/desktop/choc-column-desk.jpg" srcset="" alt="chocolade">
+              <img class="carousel__img" src="./images/sellers/desktop/choc-column-desk.jpg" alt="chocolade">
             </li>
           </ul>
         </div>
