--- a/src/partials/modal-review.html
+++ b/src/partials/modal-review.html
@@ -1,11 +1,11 @@
 <div class="backdrop is-hidden" data-modal>
-    <form class="hero-modal">
-        <button class="hero-modal__close" data-modal-close>
-            <svg class="hero-modal__svg">
+    <form class="review-modal">
+        <button class="review-modal__close" data-modal-close>
+            <svg class="review-modal__svg">
                 <use href="./images/icons/symbol-defs.svg"></use>
               </svg>
         </button>
-        <h2 class="hero-modal__title">LEAVE A REVIEW ABOUT 
+        <h2 class="review-modal__title">LEAVE A REVIEW ABOUT 
             <span class="modal-review__title">OUR CHOCOLATE</span>            
         </h2>
         <ul class="modal-list">
