--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -1,5 +1,5 @@
-<section class="sabscribe">
-    <h2 class="sabscribe__title">EXPLORE OUR NEW CHOCOLATE FIRST</h2>
-    <p class="sabscribe__text">From the velvety texture to the rich and complex flavor, our New Chocolate is a true indulgence that will leave you craving more. Made with only the finest ingredients and handcrafted with the utmost care, each piece is a work of art that is sure to please.</p>
-    <button type="button" class="Subscribe">Subscribe</button>
+<section class="subscribe">
+    <h2 class="subscribe__title">EXPLORE OUR NEW CHOCOLATE FIRST</h2>
+    <p class="subscribe__text">From the velvety texture to the rich and complex flavor, our New Chocolate is a true indulgence that will leave you craving more. Made with only the finest ingredients and handcrafted with the utmost care, each piece is a work of art that is sure to please.</p>
+    <button type="button" class="Subscribe_btn">Subscribe</button>
 </section>
