--- a/src/sass/components/_subscribe.scss
+++ b/src/sass/components/_subscribe.scss
@@ -1,4 +1,9 @@
 .subscribe {
+    padding: 62px 20px 63px 20px;
+
+    @media screen and (min-width: 1200px) {
+        padding: 72px 367px 72px 366px;
+    }
 
     &__title {
         color: #FFF;
@@ -10,9 +15,16 @@
         line-height: 1.20; /* 120% */
         letter-spacing: -0.6px;
         text-transform: uppercase;
+
+        @media screen and (min-width: 1200px){
+            font-size: 24px;
+            line-height: 1.16; /* 116.667% */
+            letter-spacing: -0.72px;
+        }
     }
 
     &__text {
+        width: 467px;
         color: #FFF;
         text-align: center;
         font-family: 'Montserrat';
@@ -21,5 +33,29 @@
         font-weight: 400;
         line-height: 1.28; /* 128.571% */
         letter-spacing: -0.28px;
+
+        @media screen and (min-width: 1200px) {
+            width: 326px;
+        }
+    }
+ 
+
+    &__btn {
+        display: flex;
+        padding: 14px 40px;
+        align-items: flex-start;
+        gap: 14px;
+        border-radius: 100px;
+        background: #FD9222;
+        color: #FFF;
+        font-family: 'Montserrat';
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+
+        @media screen and (min-width: 1200px) {
+            padding: 12px 28px;
+        }
     }
 }
