--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -1,36 +1,35 @@
-<section>
-    <div class="loved" data-aos="fade-down">
-        <div class="inner-container">
-            <h2 class="loved__title">Chocolate is loved</h2>
-            <ul class="loved-list">
-                <li class="loved-list__item">
-                    <img class="carousel__img" src="../images/review/Victoria.png" srcset="" alt="women">
-                    <h3 class="loved-list__title">Victoria Dobrzhanska</h3>
-                    <p class="loved-list__text">
-                        I love this chocolate bar. 
-                        Perfect combination of light crispy wafer, covered in a thin layer chocolate.
-                    </p>
-                </li>
-                <li class="numbers-list__item">
-                    <img class="carousel__img" src="../images/review/Nazar.png" srcset="" alt="men">
-                    <h3 class="loved-list__title">Nazar Babenko</h3>
-                    <p class="loved-list__text">
-                        This chocolate confection is a delight! 
-                        A delight! 
-                        The wafer is light and crisp, the hazelnut cream is smooth, and the chocolate is good.
-                    </p>
-                </li>
-                <li class="loved-list__item">
-                    <img class="loved__img" src="../images/review/Olena.png" srcset="" alt="women">
-                    <h3 class="loved-list__title">Olena Kampusch</h3>
-                    <p class="loved-list__text">
-                        Chocolate is a family favourite treat. 
-                        Love the delicious smooth chocolate and the creaminess inside. 
-                        The wafer is soft but crunchy.
-                    </p>
-                </li>
-            </ul>
-            <button class="leave">Leave a review</button>
-        </div>
-    </div> 
+<section class="loved">
+    <div class="inner-container">
+        <h2 class="loved__title"><span class="loved__title__chocolate">Chocolate</span> is loved</h2>
+        <ul class="loved-list">
+            <li class="loved-list__item">
+                <img class="carousel__img" src="./images/review/Victoria.png" alt="women">
+                <h3 class="loved-list__title">Victoria Dobrzhanska</h3>
+                <p class="loved-list__text">
+                    I love this chocolate bar.
+                    Perfect combination of light crispy wafer, covered in a thin layer chocolate.
+                </p>
+            </li>
+            <li class="numbers-list__item">
+                <img class="carousel__img" src="./images/review/Nazar.png" alt="men">
+                <h3 class="loved-list__title">Nazar Babenko</h3>
+                <p class="loved-list__text">
+                    This chocolate confection is a delight!
+                    A delight!
+                    The wafer is light and crisp, the hazelnut cream is smooth, and the chocolate is good.
+                </p>
+            </li>
+            <li class="loved-list__item">
+                <img class="loved__img" src="./images/review/Olena.png" alt="women">
+                <h3 class="loved-list__title">Olena Kampusch</h3>
+                <p class="loved-list__text">
+                    Chocolate is a family favourite treat.
+                    Love the delicious smooth chocolate and the creaminess inside.
+                    The wafer is soft but crunchy.
+                </p>
+            </li>
+        </ul>
+        <img class="loved__img" src="./images/icons/offer-banner-short.png" alt="banner">
+        <button class="leave">Leave a review</button>
+    </div>
 </section>
