--- a/src/partials/modal-review.html
+++ b/src/partials/modal-review.html
@@ -3,10 +3,10 @@
         <button class="review-modal__close" data-modal-close>
             <svg class="review-modal__svg">
                 <use href="./images/icons/symbol-defs.svg"></use>
-              </svg>
+            </svg>
         </button>
-        <h2 class="review-modal__title">LEAVE A REVIEW ABOUT 
-            <span class="modal-review__title">OUR CHOCOLATE</span>            
+        <h2 class="review-modal__title">LEAVE A REVIEW ABOUT
+            <span class="modal-review__title">OUR CHOCOLATE</span>
         </h2>
         <ul class="modal-list">
             <li class="modal-list__item">
@@ -23,7 +23,8 @@
                 <label class="modal-list__label">
                     <img class="modal-list__img" src="./images/icons/ukraine-flag.png">
                     <p class="modal-list__number">+380</p>
-                    <input type="email" class="modal-list__input" cols=22" rows="1" placeholder="Phone Number" required />
+                    <input type="email" class="modal-list__input" cols="22" rows="1" placeholder="Phone Number"
+                        required />
                 </label>
             </li>
             <li class="modal-list__item">
