--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -1,6 +1,6 @@
 <section class="sellers" data-aos="fade-down">
     <div class="inner-container">
-      <h2 class="sellers"><span class="Sellers__span">Top</span>Sellers</h2>
+      <h2 class="sellers"><span class="sellers__span">Top</span>Sellers</h2>
       <div class="carousel-container">
         <div class="carousel-desk">
           <ul class="carousel-desk-list">
@@ -15,8 +15,8 @@
             </li>
           </ul>
         </div>
-        <p class="info">Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
-        <button class="buy">Buy now</button>
+        <p class="sellers__info">Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
+        <button class="sellers__buy" type="button">Buy now</button>
       </div>
     </div>
 </section>
