--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,4 +1,3 @@
-<div class="outer-container">
   <section class="mobile">
     <div class="inner-container">
       <button class="mobile__btn">
@@ -18,11 +17,10 @@
           <use href="./src/images/icons/symbol-defs.svg#icon-instagram"></use>
         </svg>
       </button>
-      <button class="monile__twit">
+      <button class="mobile__twit">
         <svg class="mobile__bottom__svg">
           <use href="./src/images/icons/symbol-defs.svg#icon-twitter"></use>
         </svg>
       </button>
     </div>
   </section>
-</div>
