--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,26 +1,27 @@
 <footer class="footer">
-    <h2 class="footer__title">Chocolate a delicious cure for a bad day</h2>
+    <span class="footer__title">Chocolate a delicious cure for a bad day</span>
 
     <ul class="footer-list">
         <li class="footer-list__item"><p class="footer-list__text">Contact us</p></li>
-        <li class="footer-list__item"><a class="footer-list__text">+380 (68) 443-94-26</a></li>
-        <li class="footer-list__item"><a class="footer-list__text">simplychoc@gmail.com</a></li>
+        <li class="footer-list__item"><a class="footer-list__address">+380 (68) 443-94-26</a></li>
+        <li class="footer-list__item"><a class="footer-list__address">simplychoc@gmail.com</a></li>
 
         <li class="footer-list__item">
         <svg class="footer-list__socials">
-            <use href="./../images/icons/symbol-defs.svg#icon-instagram"></use>
+            <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
         </svg></li>
 
-        <li><svg class="footer-list__socials">
-            <use href="./../images/icons/symbol-defs.svg#icon-twitter"></use>
+        <li class="footer-list__item">
+            <svg class="footer-list__socials">
+            <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
         </svg>
         </li>
 
-        <li><a href="#">Home</a></li>
-        <li><a href="#">How it’s made?</a></li>
-        <li><a href="#">Our products</a></li>
-        <li><a href="#">Top sellers</a></li>
-        <li><a href="#">Chocolate is loved</a></li>
+        <li class="footer-list__link"><a href="#" class="footer-list__text">Home</a></li>
+        <li class="footer-list__link"><a href="#" class="footer-list__text">How it’s made?</a></li>
+        <li class="footer-list__link"><a href="#" class="footer-list__text">Our products</a></li>
+        <li class="footer-list__link"><a href="#" class="footer-list__text">Top sellers</a></li>
+        <li class="footer-list__link"><a href="#" class="footer-list__text">Chocolate is loved</a></li>
     </ul>
 
 </footer>
