--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -9,15 +9,15 @@
         </h2>
         <ul class="carousel-desk-list">
             <li class="carousel-desk-list__item">
-              <img class="carousel__img" src="../images/sellers/buy-now/chocolate-1.png" alt="chocolate">
+              <img class="carousel__img" src="./images/sellers/buy-now/chocolate-1.png" alt="chocolate">
             </li>
             <p class="chocolate-buy__text">100g</p>
             <li class="carousel-desk-list__item">
-              <img class="carousel__img" src="../images/sellers/buy-now/chocolate-2.png"  alt="chocolate">
+              <img class="carousel__img" src="./images/sellers/buy-now/chocolate-2.png"  alt="chocolate">
             </li>
             <p class="chocolate-buy__text">200g</p>
             <li class="carousel-desk-list__item">
-              <img class="carousel__img" src="../images/sellers/buy-now/chocolate-3.png"  alt="chocolate">
+              <img class="carousel__img" src="./images/sellers/buy-now/chocolate-3.png"  alt="chocolate">
             </li>
             <p class="chocolate-buy__text">300g</p>
           </ul>
@@ -39,11 +39,11 @@
                 <label class="modal-list__label">Phone number
                     <img class="modal-list__img" src="./images/icons/ukraine-flag.png">
                     <p class="modal-list__number">+380</p>
-                    <input type="email" class="modal-list__input" cols=22" rows="1" placeholder="Phone Number" required />
+                    <input type="email" class="modal-list__input" cols="22" rows="1" placeholder="Phone Number" required />
                 </label>
                 <label class="modal-list__label">Card number                   
-                    <input type="email" class="modal-list__input" cols=22" rows="1" placeholder="Phone Number" required />
-                    <img class="modal-list__img" src="../images/icons/Mastercard.png">
+                    <input type="email" class="modal-list__input" cols="22" rows="1" placeholder="Card Number" required />
+                    <img class="modal-list__img" src="./images/icons/Mastercard.png">
                 </label>
             </li>
             <li class="modal-list__item">
