--- a/src/partials/video.html
+++ b/src/partials/video.html
@@ -1,20 +1,81 @@
-<section class="video">
-    <h2 class="video__header">how it's<span class="video__span">made?</span></h2>
-    <div class="video-div">
+<section class="video" id="">
+  <div class="inner-container">
+    <h2 class="video__title">
+      how it's<span class="video__title--orange">made?</span>
+    </h2>
+    <div class="video-box">
+      <div class="video-div">
+        <picture>
+          <source
+            srcset="
+              ./images/video/desktop/made-desktop@1x.jpg    1x,
+              ./images/video/desktop/2x/made-desktop@2x.jpg 2x
+            "
+            media="(min-width:1200px)"
+          />
+          <source
+            srcset="
+              ./images/video/tablet/made-tablet@1x.jpg 1x,
+              ./images/video/tablet/made-tablet@2x.jpg 2x
+            "
+            media="(min-width:768px)"
+          />
+          <source
+            srcset="
+              ./images/video/mobile/made-mobile@1x.jpg 1x,
+              ./images/video/mobile/made-mobile@2x.jpg 2x
+            "
+            media="(max-width:767px)"
+          />
+          <img
+            src="./images/video/desktop/made-desktop@1x.jpg"
+            alt="content-pic"
+            class="video-div__bg"
+          />
+        </picture>
 
-    <img src="./images/video/desktop/made-desktop@1x.jpg" alt="content-pic" class="video-div__bg" srcset="./images/video/desktop/made-desktop@1x.jpg 1x, ./images/video/desktop/2x/made-desktop@2x.jpg 2x" />
-        
-        <div class="video-play">
-            <svg class="video-play__svg">
-                <use href="./images/icons/symbol-defs.svg#icon-play"></use>
-            </svg>
-        </div>
-        <h2 class="video-title">Try  our chocolates today and discover the perfect balance of flavor</h2>
-    <ul class="video-list">
-        <li class="video-list__item">Heat the milk in a saucepan without bringing it to a boil. Add sugar and cocoa powder.</li>
-        <li class="video-list__item">At the same time, prepare a water bath. Melt the butter on it.</li>
-        <li class="video-list__item">"Mix" the milk mixture and already liquid butter. Mix thoroughly with a silicone spatula so that the mass becomes uniform and silky.</li>
-        <li class="video-list__item">Heat the mixture over low heat, letting it barely boil.</li>
-        <li class="video-list__item">Pour the chocolate into special containers (can be replaced with ice molds). Allow to cool and harden.</li>
-    </ul>
+        <button type="button" class="video-play">
+          <svg class="video-play__svg">
+            <use href="./images/icons/symbol-defs.svg#icon-play"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="video-info">
+        <h3 class="video-info__title">
+          Try our chocolates today and discover the perfect balance of flavor
+        </h3>
+        <ul class="video-list">
+          <li class="video-list__item">
+            <p class="video-list__text">
+              Heat the milk in a saucepan without bringing it to a boil. Add
+              sugar and cocoa powder.
+            </p>
+          </li>
+          <li class="video-list__item">
+            <p class="video-list__text">
+              At the same time, prepare a water bath. Melt the butter on it.
+            </p>
+          </li>
+          <li class="video-list__item">
+            <p class="video-list__text">
+              "Mix" the milk mixture and already liquid butter. Mix thoroughly
+              with a silicone spatula so that the mass becomes uniform and
+              silky.
+            </p>
+          </li>
+          <li class="video-list__item">
+            <p class="video-list__text">
+              Heat the mixture over low heat, letting it barely boil.
+            </p>
+          </li>
+          <li class="video-list__item">
+            <p class="video-list__text">
+              Pour the chocolate into special containers (can be replaced with
+              ice molds). Allow to cool and harden.
+            </p>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </section>
