--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,27 +1,33 @@
-<footer class="footer">
-    <span class="footer__title">Chocolate a delicious cure for a bad day</span>
+<footer class="footer" id="footer">
+    <div class="inner-container">
+        <div class="footer-top">
+            <h2 class="footer__title"><span>Chocolate</span> a delicious cure for a bad day</h2>
 
-    <ul class="footer-list">
-        <li class="footer-list__item"><p class="footer-list__text">Contact us</p></li>
-        <li class="footer-list__item"><a class="footer-list__address">+380 (68) 443-94-26</a></li>
-        <li class="footer-list__item"><a class="footer-list__address">simplychoc@gmail.com</a></li>
-
-        <li class="footer-list__item">
-        <svg class="footer-list__socials">
+            <div class="footer-contacts">
+                <li class="footer-contacts__"><p class="footer-list__text">Contact us</p></li>
+                <li class="footer-contacts__"><a class="footer-list__address">+380 (68) 443-94-26</a></li>
+                <li class="footer-contacts__"><a class="footer-list__address">simplychoc@gmail.com</a></li>
+            </div>
+        
+        <ul class="footer-socials">
+            <li class="footer-socials__item">
+            <svg class="footer-socials__socials">
             <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
-        </svg></li>
+            </svg></li>
 
-        <li class="footer-list__item">
-            <svg class="footer-list__socials">
+            <li class="footer-socials__item">
+            <svg class="footer-socials__socials">
             <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
-        </svg>
-        </li>
+            </svg></li>
+        </ul>
+        </div>
 
-        <li class="footer-list__link"><a href="#" class="footer-list__text">Home</a></li>
-        <li class="footer-list__link"><a href="#" class="footer-list__text">How it’s made?</a></li>
-        <li class="footer-list__link"><a href="#" class="footer-list__text">Our products</a></li>
-        <li class="footer-list__link"><a href="#" class="footer-list__text">Top sellers</a></li>
-        <li class="footer-list__link"><a href="#" class="footer-list__text">Chocolate is loved</a></li>
+        <ul class="footer-pages-list">
+        <li class="footer-pages-list__item"><a href="#header" class="footer-pages-list__link">Home</a></li>
+        <li class="footer-pages-list__item"><a href="#video" class="footer-pages-list__link">How it’s made?</a></li>
+        <li class="footer-pages-list__item"><a href="#products" class="footer-pages-list__link">Our products</a></li>
+        <li class="footer-pages-list__item"><a href="#sellers" class="footer-pages-list__link">Top sellers</a></li>
+        <li class="footer-pages-list__item"><a href="#review" class="footer-pages-list__link">Chocolate is loved</a></li>
     </ul>
-
+    </div>
 </footer>
