--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,14 +2,14 @@
     <div class="inner-container">
       <a href="#" class="header-logo"
         ><img
-          src="./src/images/icons/chocolate.svg"
+          src="./images/icons/chocolate.svg"
           alt="logo"
           class="header-logo__img"
       /></a>
 
       <button class="header-menu">
         <svg class="header-menu__svg">
-          <use href="./src/images/icons/symbol-defs.svg#icon-menu"></use>
+          <use href="./images/icons/symbol-defs.svg#icon-menu"></use>
         </svg>
       </button>
 
@@ -35,12 +35,12 @@
 
       <button class="header-menu">
         <svg class="header-menu__svg">
-          <use href="./src/images/icons/symbol-defs.svg#icon-instagram"></use>
+          <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
         </svg>
       </button>
       <button class="header-menu">
         <svg class="header-menu__svg">
-          <use href="./src/images/icons/symbol-defs.svg#icon-twitter"></use>
+          <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
         </svg>
       </button>
     </div>
