--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -2,7 +2,7 @@
     <form class="buy-modal">
         <button class="buy-modal__close" data-modal-close>
             <svg class="buy-modal__svg">
-                <use href="./images/icons/symbol-defs.svg"></use>
+                <use href="./images/icons/symbol-defs.svg#icon-close"></use>
               </svg>
         </button>
         <h2 class="buy-modal__title"><span class="modal-review__title">BUY</span> NOW      
