--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -26,5 +26,5 @@
             <button class="products-list__btn">54 UAH</button>
         </li>
     </ul>
-    <img src="../images/icons/offer-banner-long.png">
+    <img src="./images/icons/offer-banner-long.png">
 </section> 
