header-hero-mobile

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,47 +1,49 @@
-  <header class="header">
-    <div class="inner-container">
-      <a href="#" class="header-logo"
-        ><img
-          src="./images/icons/chocolate.svg"
-          alt="logo"
-          class="header-logo__img"
-      /></a>
+<header class="header" id="header">
+  <div class="inner-container">
+    <a href="#" class="header-logo"
+      ><img
+        src="./images/icons/chocolate.svg"
+        alt="logo"
+        class="header-logo__img"
+    /></a>
 
-      <button class="header-menu">
-        <svg class="header-menu__svg">
-          <use href="./images/icons/symbol-defs.svg#icon-menu"></use>
-        </svg>
-      </button>
+    <button class="header-menu">
+      <svg class="header-menu__svg">
+        <use href="./images/icons/symbol-defs.svg#icon-menu"></use>
+      </svg>
+    </button>
 
-      <nav class="header-navigation">
-        <ul class="navigation-list">
-          <li class="navigation-list__item">
-            <a href="#" class="navigation-list__link">Home</a>
-          </li>
-          <li class="navigation-list__item">
-            <a href="#" class="navigation-list__link">How it's made?</a>
-          </li>
-          <li class="navigation-list__item">
-            <a href="#" class="navigation-list__link">Our products</a>
-          </li>
-          <li class="navigation-list__item">
-            <a href="#" class="navigation-list__link">Top sellers</a>
-          </li>
-          <li class="navigation-list__item">
-            <a href="#" class="navigation-list__link">Chocolate is loved</a>
-          </li>
-        </ul>
-      </nav>
+    <nav class="header-navigation">
+      <ul class="navigation-list">
+        <li class="navigation-list__item">
+          <a href="#header" class="navigation-list__link">Home</a>
+        </li>
+        <li class="navigation-list__item">
+          <a href="#video" class="navigation-list__link">How it's made?</a>
+        </li>
+        <li class="navigation-list__item">
+          <a href="#products" class="navigation-list__link">Our products</a>
+        </li>
+        <li class="navigation-list__item">
+          <a href="#sellers" class="navigation-list__link">Top sellers</a>
+        </li>
+        <li class="navigation-list__item">
+          <a href="#review" class="navigation-list__link">Chocolate is loved</a>
+        </li>
+      </ul>
+    </nav>
 
-      <button class="header-menu">
-        <svg class="header-menu__svg">
+    <div class="menu-right">
+      <a class="menu-right__link">
+        <svg class="menu-right__svg">
           <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
         </svg>
-      </button>
-      <button class="header-menu">
-        <svg class="header-menu__svg">
+      </a>
+      <a class="menu-right__link">
+        <svg class="menu-right__svg">
           <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
         </svg>
-      </button>
+      </a>
     </div>
-  </header>
+  </div>
+</header>
