--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,26 +1,29 @@
-  <section class="hero">
-    <div class="inner-container">
-      <div class="hero-div">
-        <p class="hero-div-title">
-          Treat yourself or a loved one to <br> our finest ingredients for a moment <br>
-          of pure delight!
-        </p>
+<section class="hero" id="hero">
+  <div class="inner-container">
+    <div class="hero-bg">
+      <h1 class="hero-bg__title">
+        Treat yourself or a loved one to <br />
+        our finest ingredients for a moment <br />
+        of pure delight!
+      </h1>
+      <div class="hero-btns">
         <ul class="hero-list">
           <li class="hero-list__link">
-            <button class="hero-list__btn1">Buy now</button>
-            <button class="hero-list__btn2">How it's made?</button>
+            <button class="hero-list__btn1" type="button">Buy now</button>
           </li>
           <li class="hero-list__link">
-            <p class="hero-list__down">scroll down</p>
-            <a href="#footer" class="hero-list__sroll">
-              <svg class="hero-list__scroll__svg">
-                <use
-                  href="./images/icons/symbol-defs.svg#icon-arrow-down"
-                ></use>
-              </svg>
-            </a>
+            <a href="#video" class="hero-list__btn2">How it's made?</a>
           </li>
         </ul>
+        <div class="hero-scroll">
+          <p class="hero-scroll__down">scroll down</p>
+          <a href="#footer" class="hero-scroll__link">
+            <svg class="hero-scroll__svg">
+              <use href="./images/icons/symbol-defs.svg#icon-arrow-down"></use>
+            </svg>
+          </a>
+        </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
