--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,26 +1,28 @@
-  <section class="mobile">
-    <div class="inner-container">
-      <button class="mobile__btn">
-        <svg class="mobile__svg">
-          <use href="./images/icons/symbol-defs.svg#icon-close"></use>
-        </svg>
-      </button>
-      <ul class="mobile-list">
-        <li class="mobile-list__link">Home</li>
-        <li class="mobile-list__link">How it’s made?</li>
-        <li class="mobile-list__link">Our products</li>
-        <li class="mobile-list__link">Top sellers</li>
-        <li class="mobile-list__link">Chocolate is loved</li>
-      </ul>
-      <button class="mobile__inst">
-        <svg class="mobile__bottom__svg">
+<section class="mobile-menu">
+  <div class="inner-container">
+    <button class="mobile__btn">
+      <svg class="mobile__svg">
+        <use href="./images/icons/symbol-defs.svg#icon-close"></use>
+      </svg>
+    </button>
+    <ul class="mobile-list">
+      <li class="mobile-list__item"><a href="#header" class="mobile-list__link">Home</a></li>
+      <li class="mobile-list__item"><a href="#video" class="mobile-list__link">How it’s made?</a></li>
+      <li class="mobile-list__item"><a href="#products" class="mobile-list__link">Our products</a></li>
+      <li class="mobile-list__item"><a href="#sellers" class="mobile-list__link">Top sellers</a></li>
+      <li class="mobile-list__item"><a href="#review" class="mobile-list__link">Chocolate is loved</a></li>
+    </ul>
+    <div class="mobile-menu__socials">
+      <a class="mobile__socials">
+        <svg class="mobile__socials-svg">
           <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
         </svg>
-      </button>
-      <button class="mobile__twit">
-        <svg class="mobile__bottom__svg">
+      </a>
+      <a class="mobile__socials">
+        <svg class="mobile__socials-svg">
           <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
         </svg>
-      </button>
+      </a>
     </div>
-  </section>
+  </div>
+</section>
