--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,1 +1,58 @@
-@import '~node_modules/modern-normalize/modern-normalize.css';
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  background-color: #FAFAFA;
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.inner-container {
+  width: 100%;
+  margin: 0 auto;
+  max-width: 375px;
+  padding: 0 20px;
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    padding: 0 32px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
+}
+
+button {
+  display: block;
+  cursor: pointer;
+  border: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  width: 100%;
+}
+
+ul {
+  list-style-type: none;
+}
+
+h1,
+h2,
+h3,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+button {
+  padding: 0;
+  margin: 0;
+}
