--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -1,11 +1,11 @@
-<div class="backdrop is-hidden" data-modal>
-    <form class="buy-modal">
-        <button class="buy-modal__close" data-modal-close>
-            <svg class="buy-modal__svg">
+<div class="backdrop is-hidden">
+    <form class="modal-buy">
+        <button class="buy-modal__close">
+            <svg class="modal-buy__svg">
                 <use href="./images/icons/symbol-defs.svg#icon-close"></use>
               </svg>
         </button>
-        <h2 class="buy-modal__title"><span class="modal-review__title">BUY</span> NOW      
+        <h2 class="modal-buy__title"><span class="modal-buy__title--orange">BUY</span> NOW      
         </h2>
         <ul class="carousel-desk-list">
             <li class="carousel-desk-list__item">
