--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -1,22 +1,31 @@
-<section class="sellers" data-aos="fade-down">
+<section class="sellers" data-aos="fade-down" id="sellers">
     <div class="inner-container">
-      <h2 class="sellers"><span class="sellers__span">Top</span>Sellers</h2>
+      <h2 class="sellers-title"><span class="sellers-title__orange">Top</span>Sellers</h2>
       <div class="carousel-container">
-        <div class="carousel-desk">
-          <ul class="carousel-desk-list">
-            <li class="carousel-desk-list__item">
-              <img class="carousel__img" src="./images/sellers/desktop/choc-coffe-desk.jpg" alt="nuts">
+          <ul class="sellers-list">
+            <li class="selers-list__item">
+              <picture>
+                <source srcset="./images/sellers/desktop/choc-coffe-desk.jpg 1x, ./images/sellers/desktop/2x/choc-coffe-desk2x.jpg 2x" media="(min-width:1200px)">
+                <source srcset="./images/sellers/tablet/choc-coffe-tabl.jpg, 2ximg" media="(min-width:768px)">
+                <source srcset="./images/sellers/mobile/choc-coffe-mobile.jpg, 2ximg" media="(max-width:767px)">
+                <img class="sellers-list__img" src="./images/sellers/tablet/choc-coffe-tabl.jpg" alt="chocolate-1">
+              </picture>
+              <p class="sellers__info">Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
             </li>
-            <li class="carousel-desk-list__item">
-              <img class="carousel__img" src="./images/sellers/desktop/choc-filling-desk.jpg" alt="nuts and chocolate">
-            </li>
-            <li class="carousel-desk-list__item">
-              <img class="carousel__img" src="./images/sellers/desktop/choc-column-desk.jpg" alt="chocolade">
-            </li>
+            <li class="selers-list__item">
+              <picture>
+                <source srcset="./images/sellers/desktop/choc-filling-desk.jpg 1x, ./images/sellers/desktop/2x/choc-filling-desk2x.jpg 2x" media="(min-width:1200px)">
+                <source srcset="./images/sellers/tablet/choc-filing-tabl.jpg, 2ximg" media="(min-width:768px)">
+                <source srcset="./images/sellers/mobile/choc-filling-mobile.jpg, 2ximg" media="(max-width:767px)">
+                <img class="sellers-list__img" src="./images/sellers/tablet/choc-coffe-tabl.jpg" alt="chocolate-2">
+              </picture>
+              <picture>
+                <source srcset="./images/sellers/desktop/choc-column-desk.jpg 1x, ./images/sellers/desktop/2x/choc-column-desk2x.jpg 2x" media="(min-width:1200px)">
+                <img class="sellers-list__img" src="./images/sellers/tablet/choc-coffe-tabl.jpg" alt="chocolate-3">
+              </picture>  
+              <button class="sellers__buy" type="button">Buy now</button>
+            </li>            
           </ul>
-        </div>
-        <p class="sellers__info">Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
-        <button class="sellers__buy" type="button">Buy now</button>
       </div>
     </div>
 </section>
