--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -6,8 +6,8 @@
             <li class="selers-list__item">
               <picture>
                 <source srcset="./images/sellers/desktop/choc-coffe-desk.jpg 1x, ./images/sellers/desktop/2x/choc-coffe-desk2x.jpg 2x" media="(min-width:1200px)">
-                <source srcset="./images/sellers/tablet/choc-coffe-tabl.jpg, 2ximg" media="(min-width:768px)">
-                <source srcset="./images/sellers/mobile/choc-coffe-mobile.jpg, 2ximg" media="(max-width:767px)">
+                <source srcset="./images/sellers/tablet/choc-coffe-tabl.jpg 2x" media="(min-width:768px)">
+                <source srcset="./images/sellers/mobile/choc-coffe-mobile.jpg 2x" media="(max-width:767px)">
                 <img class="sellers-list__img" src="./images/sellers/tablet/choc-coffe-tabl.jpg" alt="chocolate-1">
               </picture>
               <p class="sellers__info">Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
@@ -15,8 +15,8 @@
             <li class="selers-list__item">
               <picture>
                 <source srcset="./images/sellers/desktop/choc-filling-desk.jpg 1x, ./images/sellers/desktop/2x/choc-filling-desk2x.jpg 2x" media="(min-width:1200px)">
-                <source srcset="./images/sellers/tablet/choc-filing-tabl.jpg, 2ximg" media="(min-width:768px)">
-                <source srcset="./images/sellers/mobile/choc-filling-mobile.jpg, 2ximg" media="(max-width:767px)">
+                <source srcset="./images/sellers/tablet/choc-filling-tabl.jpg 2x" media="(min-width:768px)">
+                <source srcset="./images/sellers/mobile/choc-filling-mobile.jpg 2x" media="(max-width:767px)">
                 <img class="sellers-list__img" src="./images/sellers/tablet/choc-coffe-tabl.jpg" alt="chocolate-2">
               </picture>
               <picture>
