--- a/src/sass/utils/_placeholders.scss
+++ b/src/sass/utils/_placeholders.scss
@@ -3,13 +3,12 @@
     background-repeat: no-repeat; 
     background-size: cover;
 }
-<<<<<<< Updated upstream
 %button{
     background-color: orange;
 }
 %list{
     position: relative;
-=======
+}
 %title{
     position: center;
 
