--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,9 +4,9 @@
             <h2 class="footer__title"><span>Chocolate</span> a delicious cure for a bad day</h2>
 
             <div class="footer-contacts">
-                <li class="footer-contacts__"><p class="footer-list__text">Contact us</p></li>
-                <li class="footer-contacts__"><a class="footer-list__address">+380 (68) 443-94-26</a></li>
-                <li class="footer-contacts__"><a class="footer-list__address">simplychoc@gmail.com</a></li>
+                <li class="footer-contacts__item"><p class="footer-list__text">Contact us</p></li>
+                <li class="footer-contacts__item"><a class="footer-list__address">+380 (68) 443-94-26</a></li>
+                <li class="footer-contacts__item"><a class="footer-list__address">simplychoc@gmail.com</a></li>
             </div>
         
         <ul class="footer-socials">
