--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -23,7 +23,7 @@
                 <source srcset="./images/sellers/desktop/choc-column-desk.jpg 1x, ./images/sellers/desktop/2x/choc-column-desk2x.jpg 2x" media="(min-width:1200px)">
                 <img class="sellers-list__img" src="./images/sellers/tablet/choc-coffe-tabl.jpg" alt="chocolate-3">
               </picture>  
-              <button class="sellers__buy" type="button">Buy now</button>
+              <button class="sellers-list__buy" type="button">Buy now</button>
             </li>            
           </ul>
       </div>
