--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header" id="header">
+<header class="main-header" id="header">
   <div class="inner-container">
     <section class="header">
       <a href="#" class="header-logo">
