--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,8 +2,8 @@
   <div class="inner-container">
     <div class="hero-bg">
       <h1 class="hero-bg__title">
-        Treat yourself or a loved one to <br />
-        our finest ingredients for a moment <br />
+        Treat yourself or a loved one <br /> 
+        to our finest ingredients for a moment <br />
         of pure delight!
       </h1>
       <div class="hero-btns">
