--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -2,14 +2,18 @@
     display: flex;
     justify-content: space-between;
     flex-direction: row;
+    align-items: center;
+    width: 100%;
+    padding-top: 20px;
     &-logo{
         display: flex;
         flex-direction: row;
         &__chocolate{
+            display: flex;
+            justify-content: center;
+            align-items: center;
             font-family:'Montserrat', sans-serif;
-            font-size: 14px;
-            font-weight: 700;
-            line-height: 18px;
+            @include fonts($font-weight:700, $line-height:18px);
             color: rgba(17, 17, 17);
             &-span{
                 font-family:'Montserrat',serif;
@@ -17,6 +21,7 @@
         }
 
         &__img{
+            margin-left: 4px;
             width: 21px;
             height: 21px;
         }
