fixes, but not true

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,8 +3,8 @@
     <div class="hero-bg">
       <h1 class="hero-bg__title">
         Treat yourself or a loved one <br /> 
-        to our finest ingredients for a moment <br />
-        of pure delight!
+        to our finest ingredients for a <br /> 
+        moment of pure delight!
       </h1>
       <div class="hero-btns">
         <ul class="hero-list">
