--- a/src/sass/utils/_placeholders.scss
+++ b/src/sass/utils/_placeholders.scss
@@ -1,16 +1,18 @@
-%background-img{
+%bg-img{
     background-position: center;
-    background-repeat: no-repeat; 
+    background-repeat: no-repeat;
     background-size: cover;
 }
-%button{
-    background-color: orange;
-}
-%list{
-    position: relative;
-}
-%title{
-    position: center;
 
->>>>>>> Stashed changes
+%text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+%orange-btn{
+    align-items: center;
+    justify-content: center;
+    border-radius: 100px;
+    background-color: getcolor('orange-color');
 }
