--- a/src/sass/components/_sellers.scss
+++ b/src/sass/components/_sellers.scss
@@ -1,5 +1,8 @@
 .sellers {
     padding: 77px 30px 77px;
+    @media screen and (min-width: 1200px) {
+        
+    }
 
     &__title {
         text-align: center;
@@ -9,6 +12,9 @@
         display: flex;
         flex-grow: 0;
         margin: 32px 0px;
+        @media screen and (min-width: 1200px) {
+            
+        }
     }
 
     &__span {
@@ -20,6 +26,9 @@
         letter-spacing: -3%;
         text-align: center;
         text-transform: uppercase;
+        @media screen and (min-width: 1200px) {
+            
+        }
     }
 
 }
@@ -30,6 +39,9 @@
         height: 464px;
         margin: 0px 20px;
         border-radius: 15px;
+        @media screen and (min-width: 1200px) {
+            
+        }
     }
 
     &__info {
@@ -45,6 +57,9 @@
         order: 1;
         flex-grow: 0;
         margin: 20px 0px;
+        @media screen and (min-width: 1200px) {
+            
+        }
     }
 
     &__buy {
