--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -1,35 +1,65 @@
-<section class="loved">
+<section class="reviews" id="reviews">
     <div class="inner-container">
-        <h2 class="loved__title"><span class="loved__title__chocolate">Chocolate</span> is loved</h2>
-        <ul class="loved-list">
-            <li class="loved-list__item">
-                <img class="carousel__img" src="./images/review/Victoria.png" alt="women">
-                <h3 class="loved-list__title">Victoria Dobrzhanska</h3>
-                <p class="loved-list__text">
+        <h2 class="reviews__title"><span class="reviews__title--chocolate">Chocolate</span> is loved</h2>
+        <div class="swiper reviews-slider">
+        <ul class="reviews-list swiper-wrapper">
+            <li class="reviews-list__item swiper-slide">
+                <img class="carousel__img" srcset="./images/review/Victoria1x.png 1x, ./images/review/2x/Victoria2x.png 2x" src="./images/review/Victoria1x.png" alt="women">
+                <h3 class="reviews-list__title">Victoria Dobrzhanska</h3>
+                <p class="reviews-list__text">
                     I love this chocolate bar.
                     Perfect combination of light crispy wafer, covered in a thin layer chocolate.
                 </p>
             </li>
-            <li class="numbers-list__item">
-                <img class="carousel__img" src="./images/review/Nazar.png" alt="men">
-                <h3 class="loved-list__title">Nazar Babenko</h3>
-                <p class="loved-list__text">
+            <li class="numbers-list__item swiper-slide">
+                <img class="carousel__img" srcset="./images/review/Nazar1x.png 1x, ./images/review/2x/Nazar2x.png 2x" src="./images/review/Nazar1x.png" alt="men">
+                <h3 class="reviews-list__title">Nazar Babenko</h3>
+                <p class="reviews-list__text">
                     This chocolate confection is a delight!
                     A delight!
                     The wafer is light and crisp, the hazelnut cream is smooth, and the chocolate is good.
                 </p>
             </li>
-            <li class="loved-list__item">
-                <img class="loved__img" src="./images/review/Olena.png" alt="women">
-                <h3 class="loved-list__title">Olena Kampusch</h3>
-                <p class="loved-list__text">
+            <li class="reviews-list__item swiper-slide">
+                <img class="reviews__img" srcset="./images/review/Olena1x.png 1x, ./images/review/2x/Olena2x.png 2x" src="./images/review/Olena1x.png" alt="women">
+                <h3 class="reviews-list__title">Olena Kampusch</h3>
+                <p class="reviews-list__text">
                     Chocolate is a family favourite treat.
                     Love the delicious smooth chocolate and the creaminess inside.
                     The wafer is soft but crunchy.
                 </p>
             </li>
+            <li class="reviews-list__item swiper-slide">
+                <img class="reviews__img" srcset="./images/review/NatliaSus1x.png 1x, ./images/review/2x/NatliaSus2x.png 2x" src="./images/review/NatliaSus1x.png" alt="women">
+                <h3 class="reviews-list__title">Natalia Sus</h3>
+                <p class="reviews-list__text">
+                    The chocolate assortment was delicious. Both 
+                    dark and milk chocolate pieces were smooth 
+                    and just right on the sweetness level. 
+                </p>
+            </li>
+            <li class="reviews-list__item swiper-slide">
+                <img class="reviews__img" srcset="./images/review/DaniloNottingham1x.png 1x, ./images/review/2x/DaniloNottingham2x.png 2x" src="./images/review/DaniloNottingham1x.png" alt="women">
+                <h3 class="reviews-list__title">Danilo Nottingham</h3>
+                <p class="reviews-list__text">
+                    This is delicious. It so rich and flavorful you 
+                    don’t need to use as many. I love topping an 
+                    apple with almond butter and these chips for 
+                    a snack.
+                </p>
+            </li>
+            <li class="reviews-list__item swiper-slide">
+                <img class="reviews__img" srcset="./images/review/IrinaTydnyuk1x.png 1x, ./images/review/2x/IrinaTydnyuk2x.png 2x" src="./images/review/IrinaTydnyuk1x.png"  alt="women">
+                <h3 class="reviews-list__title">Irina Tydnyuk</h3>
+                <p class="reviews-list__text">
+                    This is simply the best chocolate around, and
+                    I'm just thrilled to support a local company!
+                    Best local chocolate - world class 
+                </p>
+            </li>
         </ul>
-        <img class="loved__img" src="./images/icons/offer-banner-short.png" alt="banner">
-        <button class="leave">Leave a review</button>
+        <div class="swiper-pagination"></div>
+    </div>
+        <button class="reviews__btn" type="button">Leave a review</button>
     </div>
 </section>
