--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -13,10 +13,12 @@
             justify-content: center;
             align-items: center;
             font-family:'Montserrat', sans-serif;
-            @include fonts($font-weight:700, $line-height:18px);
+            @include fonts($font-weight:700, $line-height:18px, $font-size:14px);
             color: rgba(17, 17, 17);
             &-span{
-                font-family:'Montserrat',serif;
+                display: block;
+                margin-right: 3px;
+                font-family:'Montserrat', Italic;
             }
         }
 
