--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -10,18 +10,31 @@
     background-size: cover;
     border-radius: 30px;
     height: 621px;
+    @media screen and (min-width:768px){
+      height: 890px;
+      padding: 671px 40px 40px 40px;
+      background-image: url('../images/hero/tablet/hero-bg-tablet.jpg');
+    }
     &__title {
       display: flex;
-      width: 299px;
+      max-width: 299px;
       margin-bottom: 31px;
       color: rgb(255, 255, 255);
       font-family: 'Montserrat', sans-serif;
       @include fonts($font-weight: 500, $line-height: 24px, $font-size: 20px);
+      @media screen and (min-width:768px){
+        max-width: 484px;
+        @include fonts($line-height: 34px, $font-size: 28px);
+      }
     }
   }
   &-btns {
     display: flex;
     flex-wrap: wrap;
+    @media screen and (min-width:768px){
+      flex-direction: row;
+      flex-wrap: nowrap;
+    }
   }
   &-list {
     display: flex;
@@ -51,6 +64,9 @@
       color: getcolor('advantages-color');
       font-family: 'Montserrat', sans-serif;
       @include fonts($font-weight: 600, $line-height: 17px, $font-size: 14px);
+      @media screen and (min-width:768px){
+        margin-right: 153px;
+      }
     }
   }
   &-scroll {
@@ -58,12 +74,17 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    height: 38px;
   }
   &-scroll__down {
     margin-right: 12px;
     color: rgb(255, 255, 255);
     font-family: 'Montserrat', sans-serif;
     @include fonts($font-weight: 500, $line-height: 14px, $font-size: 12px);
+    @media screen and (min-width:768px){
+      margin-right: 14px;
+      @include fonts($line-height: 18px, $font-size: 14px);
+    }
   }
   &-scroll__svg {
     fill: getcolor('orange-color');
@@ -77,6 +98,10 @@
     border-radius: 50%;
     width: 28px;
     height: 28px;
+    @media screen and (min-width:768px){
+      width: 38px;
+      height: 38px;
+    }
     background-color: rgb(255, 255, 255);
   }
 }
